--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "AstroBunny",
+  "author": "Hrihorii Ilin",
+  "description": "An Accessible Dashboard Theme for Astro including a login page, a dashboard page and several other pages and components with editor.",
+  "homepage": "https://astrobunny.devopsick.com",
+  "name": "astrobunny",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && tsc --noEmit && astro build",
+    "space": "node --max-old-space-size=4096 astro",
     "preview": "astro preview",
     "astro": "astro",
     "check": "astro check",
@@ -18,7 +22,11 @@
     "@astrojs/check": "^0.2.0",
     "@astrojs/node": "^6.0.2",
     "@astrojs/react": "^3.0.2",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
+    "@rollup/plugin-yaml": "^4.1.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.0",
     "@types/node-fetch": "^2.6.6",
     "@types/react": "^18.0.21",
@@ -26,12 +34,14 @@
     "astro": "^3.2.1",
     "graphql": "^16.8.1",
     "graphql-yoga": "^4.0.5",
-    "nuejs-core": "^0.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^5.2.2"
+    "sharp": "^0.32.6",
+    "tailwindcss": "^3.3.3",
+    "typescript": "latest"
   },
   "devDependencies": {
-    "bun-types": "^1.0.3"
+    "bun-types": "^1.0.3",
+    "daisyui": "latest"
   }
 }
