--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "name": "astrobunny",
   "type": "module",
   "version": "0.0.1",
+  "workspaces": [
+    "dbest-stack/*"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -23,20 +26,22 @@
     "@astrojs/node": "^6.0.2",
     "@astrojs/react": "^3.0.2",
     "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/solid-js": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
     "@rollup/plugin-yaml": "^4.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.0",
     "@types/node-fetch": "^2.6.6",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
     "astro": "^3.2.1",
     "graphql": "^16.8.1",
     "graphql-yoga": "^4.0.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.32.6",
+    "solid-js": "^1.7.12",
     "tailwindcss": "^3.3.3",
     "typescript": "latest"
   },
