--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@astrojs/solid-js": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
+    "@fontsource/inter": "^5.0.8",
     "@rollup/plugin-yaml": "^4.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.0",
